--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,9 +4,15 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
-actix-web = "4.11.0"
+actix-web =  "4.11.0"
+actix-session = { version = "0.10.1", features = ["cookie-session"] }
 askama = "0.14.0"
 actix-files = "0.6.6"
+rand = "0.8.5"
+serde = { version = "1.0.219", features = ["derive"] }
+reqwest = {version = "0.12.15", features = ["json"]}
+url = "2.5.4"
+base64 = "0.22.1"
 
 [build-dependencies]
 askama = "0.14.0"
